# nba-shots

./: .air.toml  .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  init-db.sh
cmd/api/: main.go
cmd/ingest/: ingest.go
data-pipeline/: .dockerignore  Dockerfile  Ingest.ipynb  README.md  docker-compose.yml  ingest.py  nba-shots-schema.mermaid  pyproject.toml
frontend/: .env.template  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx  types.ts
frontend/src/api/: exportjson.ts  helpers.ts  queries.ts  saveimage.ts
frontend/src/columndefs/: player.tsx  season.tsx  team.tsx
frontend/src/components/filter/: DateFilterSection.tsx  FilterSection.tsx  GameTimeFilterSection.tsx  LocationFilterSection.tsx  types.ts  useDateFilterManagement.ts  useFilterManagement.ts  useStringFilterManagement.ts
frontend/src/components/icons/: twitter.tsx
frontend/src/pages/: Home.tsx  home.tsx
frontend/src/routes/: __root.tsx  index.lazy.tsx  index.tsx
internal/: README.md
internal/database/: database.go  database_test.go  game.go  helpers.go  insert.go  player.go  query.go  season.go  shot.go  shot_query.go  team.go
internal/server/: game.go  helpers.go  player.go  routes.go  routes_test.go  season.go  server.go  shot.go  team.go
internal/types/: types.go
migrations/: 001_create_tables.sql  002_create_logs.sql  003_change_logs_table.sql
testing/: Testing.ipynb
(+24 files in other folders)
